--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -218,15 +218,7 @@
 @Article{edilson1,
 author = {Edilson},
 title = {Edilson},
-journal = {•},
 year = {2015},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {•},
-OPTmonth = {•},,
-OPTnote = {•},
-OPTannote = {•}
 }
 
 @Article{Arato2003,
@@ -396,7 +388,7 @@ year={2014},
 pages={737--744},
 }
 
-@article{Wu2014,
+@inproceedings{Wu2014,
 author={Wu and Wu and Tai and Zhao and Fan and Yuan},
 title={Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP},
 journal={Proc. of the Intl. Conf. on Software Engineering and Service Science},
@@ -404,12 +396,14 @@ year={2014},
 pages={921--924},
 }
 
-@article{Bjorner2014,
+@inproceedings{Bjorner2014,
 author={Bjorner and Phan},
 title={vZ - Maximal Satisfaction with Z3},
 journal={Proc. of the Intl. Symp. on Symbolic Computation in Software Science},
 year={2014},
-pages={1--10},
+series    = {EPiC Series},
+volume    = {30},
+pages={1--9}
 }
 
 @article{Federica2008,
