--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -928,6 +928,6 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \bibliographystyle{ACM-Reference-Format-Journals}
-\bibliography{Ref.bib}
+\bibliography{Ref}
 
 \end{document}
