--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -215,14 +215,8 @@
  @String{WHFreeman = "W. H. Freeman and Co." }
 
 %Entries
-@Article{edilson1,
-author = {Edilson},
-title = {Edilson},
-year = {2015},
-}
-
 @Article{Arato2003,
-author={Arato and Juhasz and Mann and Orban and Papp},
+author={Arato, P. and Juhasz, S. and Mann, A. and Orban, A. and Papp, D.},
 title={Hardware/software partitioning in embedded system design},
 journal = {Intl. Symp. on Intelligent Signal Processing},
 year = {2003},
@@ -230,7 +224,7 @@ pages = {192--202},
 }
 
 @article{Mann2007,
-author={Mann and Orban and Arato},
+author={Mann, A. and Orban, A. and Arato, P.},
 title={Finding optimal hardware/software partitions},
 journal={Formal Methods in System Design},
 volume={31},
@@ -240,7 +234,7 @@ pages={241-263},
 }
 
 @article{Trindade2015,
-author={Trindade and Cordeiro},
+author={Trindade, A. and Cordeiro, L.},
 title={Applying SMT-based verification to hardware/software partitioning in embedded systems},
 journal={Design Automation for Embedded Systems (to appear)},
 volume= {},
@@ -251,7 +245,7 @@ note= {},
 }
 
 @article{Trindade2016,
-author={Trindade and Ismail and Cordeiro},
+author={Trindade, A. and Ismail, H. and Cordeiro, L.},
 title={Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
 journal={V Brazilian Symp. on Computing Systems Engineering (to appear)},
 year = {2015},
@@ -259,7 +253,7 @@ year = {2015},
 
 
 @article{Bjorner2015,
-author={Bjorner and Phan and Fleckenstein},
+author={Bjorner, N. and Phan, A. and Fleckenstein, L.},
 title={vZ - An Optimizing SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 volume= {9035},
@@ -268,7 +262,7 @@ pages={194--199},
 }
 
 @article{Tang2009,
-author={Tang and Lin and Ren},
+author={Tang, T. and Lin, Y. and Ren, X.},
 title={Mapping OpenMP concepts to the stream programming model},
 journal={ Proc. of the Intl. Conf. on Computer Science Education},
 year={2010},
@@ -283,7 +277,7 @@ year = {2002},
 }
 
 @article{Cordeiro2012,
-author={Cordeiro and Fischer and Marques-Silva},
+author={Cordeiro, L. Fischer, B. and Marques-Silva, J.},
 title={SMT-based Bounded Model Checking for Embedded ANSI-C Software},
 journal={IEEE Transactions on Software Engineering},
 volume={38},
@@ -293,13 +287,13 @@ pages={957--974},
 }
 
 @article{Rao2009,
-author={Rao},
+author={Singiresu, S. Rao},
 title={Engineering Optimization: Theory and Practice. 4th edition},
 year={2009},
 }
 
 @article{Biere2009,
-author={Biere and Heule and Maaren and Walsh},
+author={Biere, A. and Heule, M and Maaren, H. and Walsh, T.},
 title={Bounded Model Checking.},
 journal={Handbook of Satisfiability},
 publisher={IOS Press},
@@ -308,7 +302,7 @@ year = {2009},
 
 
 @article{Clarke2001,
-author={Clarke and Biere and Raimi and Zhu},
+author={Clarke, E. and Biere, A. and Raimi, R. and Zhu, Y.},
 title={Bounded model checking using satisfiability solving},
 journal={Formal Methods in System Design},
 volume={19},
@@ -318,7 +312,7 @@ pages={7--34},
 }
 
 @article{Armando2009,
-author={Armando and Mantovani and Platania},
+author={Armando, A. and Mantovani, J. and Platania, L.},
 title={Bounded model checking of software using SMT solvers instead of SAT solvers},
 journal={Intl. Journal on Software Tools for Technology Transfer},
 volume={11},
@@ -328,7 +322,7 @@ pages={69--83},
 }
 
 @article{Ganai2006,
-author={Ganai and Gupta},
+author={Ganai, M.K. and Gupta, A.},
 title={Accelerating high-level bounded model checking},
 journal={Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design},
 year={2006},
@@ -336,7 +330,7 @@ pages={794--801},
 }
 
 @article{Ramalho2013,
-author={Ramalho and Freitas and Sousa and Marques and Cordeiro and Fischer},
+author={Ramalho, M. and Freitas, M. and Sousa, F. and Marques, H. and Cordeiro, L. and Fischer, B.},
 title={SMT-Based Bounded Model Checking of C++ Programs.},
 journal={Intl. Conf. and Workshops on the Engineering of Computer-Based Systems},
 year={2013},
@@ -344,7 +338,7 @@ pages={147--156},
 }
 
 @article{DeMoura2008,
-author={Moura and Bjorner},
+author={Moura, L. and Bjorner, N.},
 title={Z3: An Efficient SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 year={2008},
@@ -352,7 +346,7 @@ pages={337--340},
 }
 
 @article{Brummayer2009,
-author={Brummayer and Biere},
+author={Brummayer, R. and Biere, A. },
 title={Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 volume={5505},
@@ -361,7 +355,7 @@ pages={174--177},
 }
 
 @article{Barrett2011,
-author={Barrett and Conway and Deters and Hadarean and Jovanovic and King and Reynolds and Tinelli},
+author={Barrett, C. and Conway, C. and Deters, M. and Hadarean, L. and Jovanovic, D. and King, T. and Reynolds, A. and Tinelli, C.},
 title={CVC4},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 volume={6806},
@@ -370,7 +364,7 @@ pages={171--177},
 }
 
 @article{Bozzano2005,
-author={Bozzano and Bruttomesso and Cimatti and Junttila and Rossum and Schulz  and Sebastiani},
+author={Bozzano, M and Bruttomesso, R. and Cimatti, A. and Junttila, T. and Rossum, P. and Schulz, S. and Sebastiani, R.},
 title={MathSAT: Tight integration of SAT and mathematical decision procedures},
 journal={Journal of Automated Reasoning},
 volume={35},
@@ -380,7 +374,7 @@ pages={265--293},
 }
 
 @article{Dutertre2014,
-author={Dutertre},
+author={Dutertre, B.},
 title={Yices 2.2},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 volume= {8559},
@@ -388,22 +382,20 @@ year={2014},
 pages={737--744},
 }
 
-@inproceedings{Wu2014,
-author={Wu and Wu and Tai and Zhao and Fan and Yuan},
+@article{Wu2014,
+author={Wu M. and Wu, W. and Tai, N. and Zhao,  H. and Fan, J. and Yuan, N.},
 title={Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP},
 journal={Proc. of the Intl. Conf. on Software Engineering and Service Science},
 year={2014},
 pages={921--924},
 }
 
-@inproceedings{Bjorner2014,
-author={Bjorner and Phan},
+@article{Bjorner2014,
+author={Bjorner, N. and Phan, A.},
 title={vZ - Maximal Satisfaction with Z3},
 journal={Proc. of the Intl. Symp. on Symbolic Computation in Software Science},
 year={2014},
-series    = {EPiC Series},
-volume    = {30},
-pages={1--9}
+pages={1--10},
 }
 
 @article{Federica2008,
@@ -423,14 +415,14 @@ pages={2717--2723},
 }
 
 @article{Barth1995,
-author={Barth and Putnam},
+author={Barth, P. and Putnam, D.},
 title={Enumeration Algorithm for Linear Pseudo-Boolean Optimization.},
 journal={Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science},
 year={1995},
 }
 
 @article{Vasco2005,
-author={Manquinho and Marques-Silva},
+author={Manquinho, V. and Marques-Silva, J.},
 title={Effective Lower Bounding Techniques for Pseudo-Boolean Optimization},
 journal={IST/INESC-ID, Technical University of Lisbon, Portugal},
 year={2005},
@@ -444,7 +436,7 @@ year={2015}
 }
 
 @article{Cormem,
-author={Cormen and Leiserson and Rivest and Stein},
+author={Cormen, T. and Leiserson, C. and Rivest, R. and Stein, C.},
 title={Introduction to Algorithms},
 journal={MIT Press},
 volume={I-XIX},
@@ -453,7 +445,7 @@ pages={1--1292},
 }
 
 @article{Dagum1998,
-author={Dagum and Menon},
+author={Dagum, L. and Menon,R.},
 title={OpenMP: An Industry-Standard API for Shared-Memory Programming.},
 journal={Proc. of the Intl. Conf. on Computational Science Engineering},
 year={1998},
@@ -469,7 +461,7 @@ year={2013},
 
 
 @article{Tranquillo2011,
-author={Tranquillo},
+author={Tranquillo, J.},
 title={Matlab for Engineering and the Life Sciences},
 journal={Synthesis Lectures on Engineering. Morgan Claypool},
 year={2011},
@@ -477,7 +469,7 @@ year={2011},
 
 
 @article{Hong2010,
-author={Hong and Cai},
+author={Hong, L. and Cai, J.},
 title={The application guide of mixed programming between MATLAB and other programming languages},
 journal={Proc. of the Intl. Conf. on Computer and Automation Engineering},
 year={2010},
@@ -486,7 +478,7 @@ pages={185--189},
 
 
 @article{Cordeiro2011,
-author={Cordeiro and Fischer},
+author={Cordeiro, L. and Fischer, B.},
 title={Verifying multi-threaded software using SMT-based context-bounded model checking.},
 journal={Proc. of the Intl. Conf. on Software Engineering},
 year={2011},
@@ -494,7 +486,7 @@ pages={331--340},
 }
 
 @article{Teich2012,
-author={Teich},
+author={Teich, J.},
 title={Hardware/Software Codesign: The Past, the Present, and Predicting the Future},
 journal={Proc. of the IEEE, Special Centennial Issue},
 volume={100},
@@ -504,7 +496,7 @@ pages={1411--1430},
 
 
 @article{Guthaus2001,
-author={Guthaus and Ringenberg and Ernst and Austin and Mudge and Brown},
+author={Guthaus, M. and Ringenberg, J. and Ernst, D.and Austin, T. and Mudge, T. and Brown, R. },
 title={Matthew  Guthaus, Jeffrey  Ringenberg, Dan Ernst, Todd Austin, Trevor Mudge, Richard Brown},
 journal={Proc. of the annual workshop on workload characterization},
 year={2001},
@@ -513,7 +505,7 @@ pages={3--14},
 
 
 @article{Arato2005,
-author={Arato and Mann and Orban},
+author={Arato, P. and Mann, A. and Orban, A.},
 title={Algorithmic aspects of hardware/software partitioning},
 journal={ACM Transactions on Design Automation of Electronic Systems},
 number={1},
@@ -524,7 +516,7 @@ pages={136--156},
 
 
 @article{Holzmann2011,
-author={Holzmann and Joshi and Groce},
+author={Holzmann, G. and Joshi, R. and Groce, A.},
 title={Swarm Verification Techniques},
 journal={IEEE Transactions on Software Engineering},
 volume={37},
@@ -535,7 +527,7 @@ pages={845--857},
 
 
 @article{Holzmann2012,
-author={Holzmann},
+author={Holzmann, G.},
 title={Parallelizing the spin model checker},
 journal={Proc. of the Intl. Symp. on Model Checking Software},
 year={2012},
@@ -545,7 +537,7 @@ pages={155--171},
 
 
 @article{Wintersteiger2009,
-author={Wintersteiger and Hamadi and Moura},
+author={Wintersteiger, C. and Hamadi, Y. and Moura, L.},
 title={A Concurrent Portfolio Approach to SMT Solving.},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 year={2009},
@@ -554,7 +546,7 @@ pages={715--720},
 
 
 @article{Qawasmeh2014,
-author={Qawasmeh and Malik and Chapman},
+author={Qawasmeh, A. and Malik, A. and Chapman, B.},
 title={OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},
 journal={Proc. of the Intl. Symp. on Parallel Distributed processing},
 year={2014},
@@ -562,7 +554,7 @@ pages={1049--1058},
 }
 
 @article{Pavlinovic2015,
-author={Pavlinovi and King and Wies},
+author={Pavlinovi, Z. and King, T. and Wies, T.},
 title={Practical SMT-Based Type Error Localization},
 journal={Proc. of the Intl. Conf. on Functional Programming},
 year={2015},
@@ -570,7 +562,7 @@ pages={412--423},
 }
 
 @article{Patrick2015,
-author={Sebastiani and Trentin},
+author={Sebastiani, R. and Trentin, P.},
 title={OptiMathSAT: A Tool for Optimization Modulo Theories},
 journal={Proc. of the Intl. Conf. on Computer Aided Verification},
 volume={9206},
@@ -579,7 +571,7 @@ pages={447--454},
 }
 
 @article{Holzmann11,
-author={Holzmann and Joshi and Groce},
+author={Holzmann, G. and Joshi, R. and Groce, A.},
 title={Swarm Verification Techniques},
 journal={IEEE Transactions Software Engineering},
 volume={37},
@@ -593,18 +585,4 @@ author={23008-2},
 title={Information technology -- high efficiency coding and media delivery in heterogeneous environments -- part 2: high efficiency video coding},
 year={2015},
 publisher={International Organization for Standardization}
-}
-
-@article{ref2,
-author={Gary J. Sullivan and Jens-Rainer Ohm and Woo-Jin Han and Thomas Wiegand},
-title={Overview of the high efficiency video coding (HEVC) standard},
-journal={IEEE Trans. Circuits Syst. Video Technol.},
-volume={22},
-number={12},
-month=sep,
-year={2012},
-pages={1649--1668},
-doi={},
-url={},
-note={},
 }
