--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -540,6 +540,8 @@ pages={155--171},
 author={Wintersteiger, C. and Hamadi, Y. and Moura, L.},
 title={A Concurrent Portfolio Approach to SMT Solving.},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
+series={LNCS},
+volue={5643},
 year={2009},
 pages={715--720},
 }
