--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -246,7 +246,7 @@ note= {},
 
 @article{Trindade2016,
 author={Trindade, A. and Ismail, H. and Cordeiro, L.},
-title={Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
+title={Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
 journal={V Brazilian Symp. on Computing Systems Engineering (to appear)},
 year = {2015},
 }
