--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -399,7 +399,7 @@ pages={1--10},
 }
 
 @article{Federica2008,
-author={Paci and Ferrini and Sun and Bertino},
+author={Paci, F. and Ferrini, R. and Sun, Y. and Bertino, E.},
 title={Authorization and User Failure Resiliency for WS-BPEL business processes},
 journal={Proc. of the Intl. Conf. on Service-Oriented Computing},
 year={2008},
@@ -407,7 +407,7 @@ pages={116--131},
 }
 
 @article{NarodytskaN,
-author={Narodytska and Bacchus},
+author={Narodytska, N. and Bacchus, F.},
 title={Maximum Satisfiability Using Core-Guided MAXSAT Resolution},
 journal={Proc. of the Conf. on Artificial Intelligence},
 year={2014},
@@ -454,7 +454,7 @@ pages={46--55},
 
 
 @article{TheMathWorks2013,
-author={MathWorks and Inc.},
+author={MathWorks},
 title={MATLAB (version R2013a)},
 year={2013},
 }
