--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -411,7 +411,7 @@ Three different optimization and decision problems can be defined. In this paper
 \vspace{1 mm}
 \begin{align}
 \label{hw-sw-partitioning}
-s\left(1-x\right) + c|EX| \leq S_0, 
+s\left(1-x\right) + c|Ex| \leq S_0, 
 \end{align}
 
 \vspace{2 mm}
