--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -270,7 +270,7 @@ pages={1900--1905},
 }
 
 @article{OpenMP1998,
-author={Muller},
+author={Muller, M.},
 title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 2.0},
 journal={OpenMP Architecture Review Board},
 year = {2002},
@@ -293,7 +293,7 @@ year={2009},
 }
 
 @article{Biere2009,
-author={Biere, A. and Heule, M and Maaren, H. and Walsh, T.},
+author={Biere, A. and Heule, M. and Maaren, H. and Walsh, T.},
 title={Bounded Model Checking.},
 journal={Handbook of Satisfiability},
 publisher={IOS Press},
