--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -364,7 +364,7 @@ pages={171--177},
 }
 
 @article{Bozzano2005,
-author={Bozzano, M and Bruttomesso, R. and Cimatti, A. and Junttila, T. and Rossum, P. and Schulz, S. and Sebastiani, R.},
+author={Bozzano, M. and Bruttomesso, R. and Cimatti, A. and Junttila, T. and Rossum, P. and Schulz, S. and Sebastiani, R.},
 title={MathSAT: Tight integration of SAT and mathematical decision procedures},
 journal={Journal of Automated Reasoning},
 volume={35},
