--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -429,9 +429,9 @@ year={2005},
 }
 
 @article{Z3API,
-author={Magellan},
+author={Microsoft Research},
 title={Z3 API - Source code and documentation},
-journal={Accessed 18th August 2015},
+journal={https://z3.codeplex.com/. Accessed 18th August 2015},
 year={2015}
 }
 
