--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -103,11 +103,11 @@ We present an alternative approach to solve the hardware and software partitioni
 
 \KEYWORD{hardware-software co-design, hardware-software partitioning, optimization, model checking, multi-core, OpenMP.}
 
-\REF{to this paper should be made as follows: Rodr\'{\i}guez
+\REF{\textcolor{red}{to this paper should be made as follows: Rodr\'{\i}guez
 Bol\'{\i}var, M.P. and Sen\'{e}s Garc\'{\i}a, B. (xxxx) `The
 corporate environmental disclosures on the internet: the case of
 IBEX 35 Spanish companies', {\it International Journal of Metadata,
-Semantics and Ontologies}, Vol. x, No. x, pp.xxx\textendash xxx.}
+Semantics and Ontologies}, Vol. x, No. x, pp.xxx\textendash xxx.}}
 
 \begin{bio}
 \textcolor{red}{
@@ -695,15 +695,6 @@ We presented five approaches to solve the HW-SW partitioning problem and compare
 If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. In particular, all three parallel approaches described in this paper produced expressive results. The fastest ESBMC approaches is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
 
 Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time.
-
-%\section*{Acknowledgement}
-%The project is funded in part by the National Institutes of Health, under Grant No. 5R01CA136535.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\bibliography{ijmso}
-%\bibliographystyle{unsrt}
-%\bibliographystyle{alpha}
 
 \begin{thebibliography}{10}
 
